# surfUltra

./: 001.py  002.py  CLAUDE.md  README.md  lightgbm_pharmhgt_model.pkl  pharmhgt_logcmc.py  pyproject.toml  smiles_to_features.py  smiles_to_features_Word2Vec.py  smiles_to_features_all.py  smiles_to_features_pharmhgt.py  train_LightGBM.py  train_PharmHGT_use_all_features.py  train_SVR.py  train_catboost_use_all_features.py  train_catboost_use_pharmhgt_features.py  train_gnn.py  train_lightgbm_advanced.py  train_lightgbm_use_all_features.py  train_lightgbm_use_pharmhgt_features.py  train_mlp.py  train_mlp_use_all_features.py  train_mlp_use_pharmhgt_features.py  train_multi_linear_regression_use_all_features.py  train_rnn.py  train_rnn_use_all_features.py  train_rnn_use_pharmhgt_features.py  train_transformer_use_Word2Vec.py  train_transformer_use_all_features.py  train_transformer_use_pharmhgt_features.py  train_xgboost.py  train_xgboost_use_all_features.py  train_xgboost_use_pharmhgt_features.py  xgboost_pharmhgt_model.pkl
.claude/plans/: polymorphic-greeting-breeze.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: surfpro_bibliography.bib  surfpro_imputed.csv  surfpro_literature.csv  surfpro_train.csv  test_all_models.csv
data/features/pharmhgt/: X_test.npy  X_train.npy  metadata.json  y_test.npy  y_train.npy
models/: README.md
models/predictor/: API_predictor.py  __init__.py  demo.py  featurizer.py  model_loader.py  pharmhgt_model.py  predict.py  retrain_catboost_all.py  test.py  torch_models.py
models/predictor/weights/: rnn_pharmhgt_model.pkl  transformer_pharmhgt_model.pkl  xgboost_pharmhgt_model.pkl
models/test_data/: input.csv.csv  out_all_default_SMILES_column.csv  output_all.csv  output_catboost_pharmhgt.csv  surfpro_test_predictions.csv
reports/: FEATURE_ENGINEERING_TECHNICAL_REPORT.md  REPORT.md  草稿.txt
